# Retail_Rag_Agent

./: advanced_rag.py  ai_based_rag.py  api.py  app.py  main.py  pyproject.toml  sales_rag.py  sql_agent.py  sql_app.py
notebooks/: cache-shm  cache-wal  rag.ipynb  retail_data.ipynb  small_retail_rag.ipynb
src/data_generation/: generate_data.py  generate_retail_sales_data.py  generate_sotre_data.py
src/data_generation/retail_data_csv/: DCS_Header.csv  Store_Header.csv
