[project]
name = "retail-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.3.0",
    "fastapi>=0.115.12",
    "groq>=0.25.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.2.0",
    "langgraph>=0.4.7",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250527",
    "pandasai>=0.4.0",
    "pandasql>=0.7.3",
    "plotly>=6.1.2",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250516",
    "uvicorn>=0.34.2",
]
